<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/login_activity_register_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/login_margin_left"
        android:layout_marginEnd="@dimen/login_margin_right"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/login_register_color"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:textSize="@dimen/login_sub_title"
                android:textColor="@color/login_text_normal_color"
                android:layout_marginTop="24dp"
                android:gravity="center"/>
            <cn.neuwljs.widget.layout.Widget_EditLayout
                android:id="@+id/login_activity_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:widget_editIcon="@drawable/login_account"
                app:widget_hint="@string/login_register_name"
                app:widget_inputType="widget_text"
                app:widget_textColor="@color/login_text_normal_color" />
            <cn.neuwljs.widget.layout.Widget_EditLayout
                android:id="@+id/login_activity_register_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:widget_editIcon="@drawable/login_student_id"
                app:widget_hint="@string/login_register_id"
                app:widget_inputType="widget_textNumber"
                app:widget_textColor="@color/login_text_normal_color" />
            <cn.neuwljs.widget.layout.Widget_EditLayout
                android:id="@+id/login_activity_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:widget_editIcon="@drawable/login_password"
                app:widget_hint="@string/login_register_password"
                app:widget_inputType="widget_textPassword"
                app:widget_textColor="@color/login_text_normal_color" />
            <cn.neuwljs.widget.layout.Widget_EditLayout
                android:id="@+id/login_activity_register_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:widget_editIcon="@drawable/login_password"
                app:widget_hint="@string/login_register_password_confirm"
                app:widget_inputType="widget_textPassword"
                app:widget_textColor="@color/login_text_normal_color" />
            <cn.neuwljs.widget.layout.Widget_EditLayout
                android:id="@+id/login_activity_register_college"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:widget_editIcon="@drawable/login_college"
                app:widget_hint="@string/login_register_college"
                app:widget_inputType="widget_text"
                app:widget_textColor="@color/login_text_normal_color" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <cn.neuwljs.widget.layout.Widget_EditLayout
                    android:id="@+id/login_activity_register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:widget_editIcon="@drawable/login_phone"
                    app:widget_hint="@string/login_register_phone"
                    app:widget_inputType="widget_textNumber"
                    app:widget_textColor="@color/login_text_normal_color" />
                <TextView
                    android:id="@+id/login_activity_register_send_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_register_send_code_confirm"
                    android:textColor="@color/login_text_clickable_color"
                    android:layout_gravity="end|center_vertical"
                    android:layout_margin="@dimen/login_margin_self"/>
            </FrameLayout>
            <cn.neuwljs.widget.layout.Widget_EditLayout
                android:id="@+id/login_activity_register_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:widget_editIcon="@drawable/login_token"
                app:widget_hint="@string/login_register_code_confirm"
                app:widget_inputType="widget_textNumber"
                app:widget_textColor="@color/login_text_normal_color" />
            <TextView
                android:id="@+id/login_activity_register_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_register_agreement"
                android:layout_margin="@dimen/login_margin_self"
                android:textSize="@dimen/login_text"
                android:textColor="@color/login_text_clickable_color"
                android:gravity="end"/>
            <Button
                android:id="@+id/login_activity_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_register_button"
                android:textSize="@dimen/login_sub_title"
                android:layout_margin="@dimen/login_margin_self" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/login_activity_register_fab"
        android:transitionName="fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_plus_x"
        android:layout_centerInParent="true"
        android:layout_alignTop="@id/login_activity_register_card_view"
        android:layout_marginTop="-24dp"
        android:backgroundTint="@color/login_register_color"
        app:fabSize="normal"
        tools:targetApi="lollipop" />
</RelativeLayout>