<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_accent_color"
    tools:context=".LoginActivity">
    <android.support.v7.widget.CardView
        android:id="@+id/login_activity_login_d_card_view"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_login"
                android:textSize="@dimen/login_sub_title"
                android:textColor="@color/login_text_normal_color"
                android:layout_margin="@dimen/login_margin_self"
                android:gravity="center"/>
            <cn.neuwljs.widget.layout.Widget_EditLayout
                android:id="@+id/login_activity_login_d_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:widget_editIcon="@drawable/login_account"
                app:widget_hint="@string/login_accent_hint"
                app:widget_inputType="widget_textNumber"
                app:widget_textColor="@color/login_text_normal_color"
                />
            <cn.neuwljs.widget.layout.Widget_EditLayout
                android:id="@+id/login_activity_login_d_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:widget_editIcon="@drawable/login_password"
                app:widget_hint="@string/login_password_hint"
                app:widget_inputType="widget_text"
                app:widget_textColor="@color/login_text_normal_color"
                />
            <TextView
                android:id="@+id/login_activity_login_d_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_forget"
                android:textSize="@dimen/login_text"
                android:textColor="@color/login_text_clickable_color"
                android:gravity="end"/>
            <Button
                android:id="@+id/login_activity_login_d_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_login_button"
                android:textSize="@dimen/login_sub_title"
                android:layout_margin="@dimen/login_margin_self"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/login_activity_login_d_fab"
        android:transitionName="fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_plus"
        android:layout_alignTop="@id/login_activity_login_d_card_view"
        android:layout_marginTop="24dp"
        android:layout_alignEnd="@id/login_activity_login_d_card_view"
        android:layout_marginEnd="-25dp"
        android:backgroundTint="@color/login_register_color"
        app:fabSize="normal"
        tools:targetApi="lollipop" />
</RelativeLayout>